crates/bsql/tests/compile_fail/sql_injection.rs
fn main() {
    let _ = bsql::query!("SELECT 1; DROP TABLE users");
}
